Removed the .html
Removed the .html from <index> and <help-page> to make the URL look prettier and professional.

--- a/help-page.html
+++ b/help-page.html
@@ -12,17 +12,17 @@
 
   <details>
     <summary><a href="https://www.youtube.com/watch?v=OltY8JIaP-4">Kenny Yip Coding</a></summary>
-    <p>I used <a href="https://www.youtube.com/watch?v=OltY8JIaP-4">Kenny Yip's method</a> because I'm not confident with using git yet.</p>
+    <p>I followed <a href="https://www.youtube.com/watch?v=OltY8JIaP-4">Kenny Yip's method</a> because I'm not confident with using git yet.</p>
   </details>
 
   <details>
-    <summary>Other Dude</summary>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, recusandae.</p>
+    <summary><a href="https://www.youtube.com/watch?v=I-yT2Err6PE">Kahan Data Solutions</a></summary>
+    <p><a href="https://www.youtube.com/watch?v=I-yT2Err6PE">Kahan's method</a> is definitely technical for the beginner.</p>
   </details>
 
   <details>
-    <summary>Other Dude</summary>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, recusandae.</p>
+    <summary><a href="https://www.youtube.com/watch?v=QyFcl_Fba-k">Net Ninja</a></summary>
+    <p><a href="https://www.youtube.com/watch?v=QyFcl_Fba-k">Net Ninja</a>is just awesome. He's the best.</p>
   </details>
 
   <br>
@@ -38,7 +38,7 @@
   <br>
 
   <button>
-    <a href="./index.html">Back Home</a>
+    <a href="./">Back Home</a>
   </button>
 
 </body>
