--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
   <h1>Welcome to <span>Don't Catch Fire</span></h1>
-  <p>a place where everything is literally up in flames. <br> try not to get burned; but if you do, remember what doesn't k1ll you makes you stwanger.</p>
+  <p>a place where everything is literally up in flames. <br> try not to get burned; but if you do, remember what doesn't <u>k1ll</u> you makes you <strong>stwanger</strong>.</p>
 
   <hr>
 
   <p>On a serious note, this is just me hosting my first github page. <br>I just wanted to have something I create be live online, without having to pay for hosting fees... for the time being.</p>
 
-  <p>You can find information on how to set up your own github page <a href="./help-page.html">here</a></p>
+  <p>You can find information on how to set up your own github page <a href="./help-page">here</a></p>
   
 </body>
 </html>
