--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Don't Catch Fire</title>
+  <title>Dont Catch Fire</title>
 </head>
 <body>
   <h1>Welcome to <span>Don't Catch Fire</span></h1>
