Changed Don't to Dont fr this time

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dont Catch Fire</title>
 </head>
 <body>
-  <h1>Welcome to <span>Don't Catch Fire</span></h1>
+  <h1>Welcome to <span>Dont Catch Fire</span></h1>
   <p>a place where everything is literally up in flames. <br> try not to get burned; but if you do, remember what doesn't <u>k1ll</u> you makes you <strong>stwanger</strong>.</p>
 
   <hr>
